Fix alignment on webkit browsers

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -15,7 +15,10 @@
 }
 
 .page > * > * >  section {
-    width: auto;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    width: 100vw;
     height: 100vh;
 
     padding-top: 18vh;
